load("@rules_python//python:pip.bzl", "compile_pip_requirements")

compile_pip_requirements(
  name = "requirements",
  src = "requirements.in",
  requirements_txt = "requirements_lock.txt",
)

py_binary(
  name = "config_es9",
  srcs = ["config_es9.py"],
  deps = [
    "//es9:interface",
    "@pypi//click",
    "@pypi//mido",
    "@pypi//python_rtmidi",
    "@pypi//loguru",
  ],
)
