load("@rules_python//python:pip.bzl", "compile_pip_requirements")

compile_pip_requirements(
  name = "requirements",
  src = "requirements.in",
  requirements_txt = "requirements_lock.txt",
)

py_library(
  name = "interface",
  srcs = ["interface.py"],
  deps = [
    "//proto:es9_py_pb2",
  ],
  visibility = [
    "//visibility:public"
  ],
)

py_binary(
  name = "cli",
  srcs = ["cli.py"],
  deps = [
    ":interface",
    "@pypi//click",
    "@pypi//loguru",
    "@pypi//mido",
    "@pypi//python_rtmidi",
  ],
)

py_binary(
  name = "config_es9",
  srcs = ["config_es9.py"],
  deps = [
    "//:interface",
    "@pypi//click",
    "@pypi//mido",
    "@pypi//python_rtmidi",
    "@pypi//loguru",
  ],
)
